[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameScenes/SelectionScreen/game_type_sub_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/hoop_field_icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/volley_field_icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/classic_field_icon.png" type="Texture" id=4]
[ext_resource path="res://GameUI/MenuElements/button_element.gd" type="Script" id=5]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/game_field_icons.png" type="Texture" id=6]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/random_field_icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/GameUI/fonts/custom/huge_font.res" type="BitmapFont" id=9]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/pin_field_icon.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 352, 234 )

[node name="GameTypeSubMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HeaderLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.0
margin_top = 24.0
margin_right = 198.0
margin_bottom = 84.0
grow_horizontal = 2
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 9 )
text = "SELECT GAME"
align = 1

[node name="GameTypes" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -509.5
margin_top = -260.0
margin_right = 509.5
margin_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 20
custom_constants/hseparation = -20
columns = 3

[node name="ClassicButton" type="TextureButton" parent="GameTypes"]
margin_right = 353.0
margin_bottom = 234.0
rect_min_size = Vector2( 353, 234 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../HoopButton")
focus_neighbour_bottom = NodePath("../PinButton")
focus_next = NodePath("../HoopButton")
focus_previous = NodePath("../RandomButton")
action_mode = 0
texture_normal = ExtResource( 4 )
texture_focused = SubResource( 1 )
script = ExtResource( 5 )

[node name="HoopButton" type="TextureButton" parent="GameTypes"]
margin_left = 333.0
margin_right = 686.0
margin_bottom = 234.0
rect_min_size = Vector2( 353, 234 )
focus_neighbour_left = NodePath("../ClassicButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../VolleyButton")
focus_neighbour_bottom = NodePath("../RandomButton")
focus_next = NodePath("../VolleyButton")
focus_previous = NodePath("../ClassicButton")
action_mode = 0
texture_normal = ExtResource( 2 )
texture_focused = SubResource( 2 )
script = ExtResource( 5 )

[node name="VolleyButton" type="TextureButton" parent="GameTypes"]
margin_left = 666.0
margin_right = 1019.0
margin_bottom = 234.0
rect_min_size = Vector2( 353, 234 )
focus_neighbour_left = NodePath("../HoopButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../RandomButton")
focus_next = NodePath("../PinButton")
focus_previous = NodePath("../HoopButton")
action_mode = 0
texture_normal = ExtResource( 3 )
texture_focused = SubResource( 3 )
script = ExtResource( 5 )

[node name="PinButton" type="TextureButton" parent="GameTypes"]
margin_top = 254.0
margin_right = 353.0
margin_bottom = 488.0
rect_min_size = Vector2( 353, 234 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ClassicButton")
focus_neighbour_right = NodePath("../RandomButton")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../RandomButton")
focus_previous = NodePath("../VolleyButton")
action_mode = 0
texture_normal = ExtResource( 11 )
texture_focused = SubResource( 3 )
script = ExtResource( 5 )

[node name="RandomButton" type="TextureButton" parent="GameTypes"]
margin_left = 333.0
margin_top = 254.0
margin_right = 686.0
margin_bottom = 488.0
rect_min_size = Vector2( 353, 234 )
focus_neighbour_left = NodePath("../PinButton")
focus_neighbour_top = NodePath("../HoopButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../ClassicButton")
focus_previous = NodePath("../PinButton")
action_mode = 0
texture_normal = ExtResource( 8 )
texture_focused = SubResource( 3 )
script = ExtResource( 5 )

[node name="DescriptionText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -99.0
margin_right = 600.0
margin_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1200, 0 )
custom_styles/normal = ExtResource( 10 )
text = "TEXT HERE"
align = 1
valign = 1
autowrap = true
